# ringSNARK

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  example.cpp  microbench.cpp  qrp.sage
benchmarks/: bench_logistic_regression_inference.cpp  bench_mul_SEAL.cpp  bench_ntt_SEAL.cpp  bench_plaintext_check_SEAL.cpp  bench_sok_outsourcing_nonbatched.cpp
depends/: CMakeLists.txt
docs/: qrp.sage
examples/: example_OpenFHE.cpp  example_SEAL.cpp  example_SEAL_int.cpp  example_plaintext_check_SEAL.cpp  plaintext_check_SEAL.cpp
include/: prover.tpp  ring.h  ring_snark.h  ring_snark.tpp  seal_prover.h  seal_verifier.h  verifier.tpp
ringsnark/: CMakeLists.txt
ringsnark/gadgetlib/: gadget.hpp  gadget.tcc  pb_variable.hpp  pb_variable.tcc  protoboard.hpp  protoboard.tcc
ringsnark/openfhe/: openfhe_ring.hpp  openfhe_ring.tcc
ringsnark/reductions/r1cs_to_qrp/: evaluation_domain.hpp  evaluation_domain.tcc  r1cs_to_qrp.hpp  r1cs_to_qrp.tcc
ringsnark/relations/: variable.hpp  variable.tcc
ringsnark/relations/arithmetic_programs/qrp/: qrp.hpp  qrp.tcc
ringsnark/relations/constraint_satisfaction_problems/r1cs/: r1cs.hpp  r1cs.tcc
ringsnark/seal/: seal_ring.cpp  seal_ring.hpp  seal_ring.tcc  seal_util.hpp
ringsnark/seal_int/: seal_ring.hpp  seal_ring.tcc
ringsnark/tests/: encoding_test.cpp
ringsnark/util/: division_test.cpp  evaluation_domain.hpp  evaluation_domain.tcc  interpolation_test.cpp  polynomials.hpp  polynomials.tcc  test_utils.hpp
ringsnark/zk_proof_systems/: r1cs_ppzksnark.hpp
ringsnark/zk_proof_systems/groth16/: groth16.hpp  groth16.tcc
ringsnark/zk_proof_systems/rinocchio/: rinocchio.hpp  rinocchio.tcc
src/: ring.cpp  seal_prover.cpp  seal_verifier.cpp
